unpackaged/main/default/objects/ValuePlus__c/fields/PayNearMeSiteID__c.field-meta.xml
<CustomField>
    <fullName>PayNearMeSiteID__c</fullName>
    <description>used in the pay near me integration</description>
    <label>Pay Near Me Site ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>