unpackaged/main/default/objects/ValuePlus__c/fields/PayNearMeSiteSecret__c.field-meta.xml
<CustomField>
    <fullName>PayNearMeSiteSecret__c</fullName>
    <description>used to store the secret key for the site so settlements can be made in Pay Near Me</description>
    <label>Pay Near Me Site Secret</label>
    <length>40</length>
    <type>Text</type>
</CustomField>