unpackaged/main/default/objects/ValuePlus__c/fields/Period_Count__c.field-meta.xml
<CustomField>
    <fullName>Period_Count__c</fullName>
    <defaultValue>IF($RecordType.Name = &#39;MyCase Payments&#39;, 40, NULL)</defaultValue>
    <description>Updated per R152784</description>
    <inlineHelpText>APM Only: Auto calculates to: &#39;# of Units x 2&#39; when Record Type = APM Payments &amp; Outbound On-Boarding Status=Pending Peer Review. Auto updates only one time upon meeting criteria &amp; can be manually updated before/after auto update.</inlineHelpText>
    <label>Period Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>