unpackaged/main/default/objects/ValuePlus__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Account__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>