unpackaged/main/default/objects/ValuePlus__c/fields/Phone_Verified__c.field-meta.xml
<CustomField>
    <fullName>Phone_Verified__c</fullName>
    <label>Phone Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>