unpackaged/main/default/objects/ValuePlus__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WordPress</fullName>
                <default>true</default>
                <label>WordPress</label>
            </value>
            <value>
                <fullName>Rails</fullName>
            </value>
            <value>
                <fullName>Duda</fullName>
            </value>
            <value>
                <fullName>Migration in Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>