unpackaged/main/default/objects/ValuePlus__c/fields/PMT_Adoption_Stage__c.field-meta.xml
<CustomField>
    <fullName>PMT_Adoption_Stage__c</fullName>
    <label>Adoption Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Touch</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Discovery - OVE</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Rent Week Check In</fullName>
            </value>
            <value>
                <fullName>Adopting</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>