unpackaged/main/default/objects/ValuePlus__c/fields/PMT_Adoption_Stage_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>PMT_Adoption_Stage_Entered_Date__c</fullName>
    <label>Adoption Stage Entered Date</label>
    <type>Date</type>
</CustomField>