unpackaged/main/default/objects/ValuePlus__c/fields/PMT_Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>PMT_Merchant_ID__c</fullName>
    <label>Merchant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>