unpackaged/main/default/objects/ValuePlus__c/fields/PMT_Payment_Application_Signed__c.field-meta.xml
<CustomField>
    <fullName>PMT_Payment_Application_Signed__c</fullName>
    <label>Payment Application Signed</label>
    <type>Date</type>
</CustomField>