unpackaged/main/default/objects/ValuePlus__c/fields/PMT_Profit_Stars_Migration_Complete__c.field-meta.xml
<CustomField>
    <fullName>PMT_Profit_Stars_Migration_Complete__c</fullName>
    <label>Profit Stars Migration Complete</label>
    <type>Date</type>
</CustomField>