unpackaged/main/default/objects/ValuePlus__c/fields/PMT_ProfitStars_Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>PMT_ProfitStars_Migration_Status__c</fullName>
    <label>ProfitStars Migration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Sage Data Updated</fullName>
            </value>
            <value>
                <fullName>Queued for ProfitStars</fullName>
            </value>
            <value>
                <fullName>Successfully Sent to ProfitStars</fullName>
            </value>
            <value>
                <fullName>Failed to Sent to ProfitStars</fullName>
            </value>
            <value>
                <fullName>On-Boarded</fullName>
            </value>
            <value>
                <fullName>Ready for APM</fullName>
            </value>
            <value>
                <fullName>Ready to Activate</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Ready to Transmit</fullName>
            </value>
            <value>
                <fullName>Transmitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>