unpackaged/main/default/objects/ValuePlus__c/fields/PMT_ProfitStars_On_Boarding_Status__c.field-meta.xml
<CustomField>
    <fullName>PMT_ProfitStars_On_Boarding_Status__c</fullName>
    <label>ProfitStars On-Boarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Review</fullName>
            </value>
            <value>
                <fullName>Collecting Documents</fullName>
            </value>
            <value>
                <fullName>Pending Peer Review</fullName>
            </value>
            <value>
                <fullName>Peer Review Approved</fullName>
            </value>
            <value>
                <fullName>Sent to ProfitStars</fullName>
            </value>
            <value>
                <fullName>Transmitted</fullName>
            </value>
            <value>
                <fullName>Ready for APM</fullName>
            </value>
            <value>
                <fullName>Ready to Go Live</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Peer Review Rejected</fullName>
            </value>
            <value>
                <fullName>APM Data Pull Failure</fullName>
            </value>
            <value>
                <fullName>Ready to Transmit</fullName>
            </value>
            <value>
                <fullName>Documents Received</fullName>
            </value>
            <value>
                <fullName>ProfitStars Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>