unpackaged/main/default/objects/ValuePlus__c/fields/Preview_Site__c.field-meta.xml
<CustomField>
    <fullName>Preview_Site__c</fullName>
    <label>Preview Site</label>
    <type>Url</type>
</CustomField>