unpackaged/main/default/objects/ValuePlus__c/fields/Principal3_Email__c.field-meta.xml
<CustomField>
    <fullName>Principal3_Email__c</fullName>
    <description>MC,IM; R1812518, R2027302; Edited: Sertifi Integ, users</description>
    <label>MC/IM - Principal 3 Email</label>
    <length>150</length>
    <type>Text</type>
</CustomField>