unpackaged/main/default/objects/ValuePlus__c/fields/Principal_1_DOB__c.field-meta.xml
<CustomField>
    <fullName>Principal_1_DOB__c</fullName>
    <formula>Account__r.Principal_1_DOB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APM - Principal 1 DOB</label>
    <type>Date</type>
</CustomField>