unpackaged/main/default/objects/ValuePlus__c/fields/Principal_1_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Principal_1_Last_Name__c</fullName>
    <formula>Account__r.Principal_1_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APM - Principal 1 Last Name</label>
    <type>Text</type>
</CustomField>