unpackaged/main/default/objects/ValuePlus__c/fields/Principal_1_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Principal_1_Mobile_Phone__c</fullName>
    <description>R1917591</description>
    <formula>Account__r.Principal_1_Mobile_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APM - Principal 1 Mobile Phone</label>
    <type>Text</type>
</CustomField>