unpackaged/main/default/objects/ValuePlus__c/fields/Principal_1_Title__c.field-meta.xml
<CustomField>
    <fullName>Principal_1_Title__c</fullName>
    <description>MC; R1920936, R2027302</description>
    <label>MC - Principal 1 Title</label>
    <length>75</length>
    <type>Text</type>
</CustomField>