unpackaged/main/default/objects/ValuePlus__c/fields/Principal_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Principal_2_Email__c</fullName>
    <description>R1917591</description>
    <formula>Account__r.Principal_2_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APM - Principal 2 Email</label>
    <type>Text</type>
</CustomField>