unpackaged/main/default/objects/ValuePlus__c/fields/Principal_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Principal_2_First_Name__c</fullName>
    <formula>Account__r.Principal_2_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APM - Principal 2 First Name</label>
    <type>Text</type>
</CustomField>