unpackaged/main/default/objects/ValuePlus__c/fields/Principal_2_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Principal_2_Ownership__c</fullName>
    <formula>Account__r.Principal_2_Ownership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APM - Principal 2 Ownership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>