unpackaged/main/default/objects/ValuePlus__c/fields/Principal_3_DOB__c.field-meta.xml
<CustomField>
    <fullName>Principal_3_DOB__c</fullName>
    <description>R164245; R1917591 Updated FLS</description>
    <formula>Account__r.Principal_3_DOB__c</formula>
    <label>APM - Principal 3 DOB</label>
    <type>Date</type>
</CustomField>