unpackaged/main/default/objects/ValuePlus__c/fields/Principal_3_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Principal_3_Last_Name__c</fullName>
    <description>R164245; R1917591 Updated FLS</description>
    <formula>Account__r.Principal_3_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APM - Principal 3 Last Name</label>
    <type>Text</type>
</CustomField>