unpackaged/main/default/objects/ValuePlus__c/fields/Principal_3_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Principal_3_Mobile_Phone__c</fullName>
    <description>R1917591</description>
    <formula>Account__r.Principal_3_Mobile_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APM - Principal 3 Mobile Phone</label>
    <type>Text</type>
</CustomField>