unpackaged/main/default/objects/ValuePlus__c/fields/Principal_3_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Principal_3_Ownership__c</fullName>
    <description>R164245; R1917591 Updated FLS</description>
    <formula>Account__r.Principal_3_Ownership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APM - Principal 3 Ownership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>