unpackaged/main/default/objects/ValuePlus__c/fields/Principal_4_SSN__c.field-meta.xml
<CustomField>
    <fullName>Principal_4_SSN__c</fullName>
    <description>MC,IM; R151946, R2027302; Edited: Sertifi Integ, users</description>
    <label>MC/IM - Principal 4 SSN</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>