unpackaged/main/default/objects/ValuePlus__c/fields/Professional_Service__c.field-meta.xml
<CustomField>
    <fullName>Professional_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professional Service</label>
    <referenceTo>Professional_Service__c</referenceTo>
    <relationshipLabel>ValuePlus</relationshipLabel>
    <relationshipName>ValuePlus</relationshipName>
    <type>Lookup</type>
</CustomField>