unpackaged/main/default/objects/ValuePlus__c/fields/Professional_Services_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professional Services Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ValuePlus</relationshipName>
    <type>Lookup</type>
</CustomField>