unpackaged/main/default/objects/ValuePlus__c/fields/ProfitStars_Bulk_Enroll__c.field-meta.xml
<CustomField>
    <fullName>ProfitStars_Bulk_Enroll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark this box to have this record enrolled with ProfitStars by the nightly scheduled job.</description>
    <label>ProfitStars Bulk Enroll</label>
    <type>Checkbox</type>
</CustomField>