unpackaged/main/default/objects/ValuePlus__c/fields/ProfitStars_Live__c.field-meta.xml
<CustomField>
    <fullName>ProfitStars_Live__c</fullName>
    <label>ProfitStars Live</label>
    <type>Date</type>
</CustomField>