unpackaged/main/default/objects/ValuePlus__c/fields/ProfitStars_Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>ProfitStars_Merchant_ID__c</fullName>
    <label>ProfitStars Merchant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>