unpackaged/main/default/objects/ValuePlus__c/fields/ProfitStars_Push_Status__c.field-meta.xml
<CustomField>
    <fullName>ProfitStars_Push_Status__c</fullName>
    <label>ProfitStars Push Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>