unpackaged/main/default/objects/ValuePlus__c/fields/ProfitStars_Underwriting_Fields_Complete__c.field-meta.xml
<CustomField>
    <fullName>ProfitStars_Underwriting_Fields_Complete__c</fullName>
    <formula>AND(
  OR( 
   ISPICKVAL(Business_Owner_1_Profile_Check__c, &#39;Approved&#39;),
   ISPICKVAL(Business_Owner_1_Profile_Check__c, &#39;Exception&#39;)
  ),
  OR(
   ISPICKVAL(Business_Owner_2_Profile_Check__c, &#39;Approved&#39;),
   ISPICKVAL(Business_Owner_2_Profile_Check__c, &#39;Exception&#39;),
   ISPICKVAL(Business_Owner_2_Profile_Check__c, &#39;&#39;)
  ),
  OR(
   ISPICKVAL(Business_Premier_Profile_Check__c, &#39;Approved&#39;),
   ISPICKVAL(Business_Premier_Profile_Check__c, &#39;Exception&#39;)
  ),
  OR(
   ISPICKVAL(Business_Validated__c, &#39;Approved - SOS&#39;),
   ISPICKVAL(Business_Validated__c, &#39;Approved - Other&#39;)
  ),
  OR(
   ISPICKVAL(TIN_Match__c, &#39;Approved&#39;),
   ISPICKVAL(TIN_Match__c, &#39;Exception&#39;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProfitStars Underwriting Fields Complete</label>
    <type>Checkbox</type>
</CustomField>