unpackaged/main/default/objects/ValuePlus__c/fields/ProfitStars_Update__c.field-meta.xml
<CustomField>
    <fullName>ProfitStars_Update__c</fullName>
    <description>IM; R2027302; Edited: users</description>
    <label>ProfitStars Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>