unpackaged/main/default/objects/ValuePlus__c/fields/Project_Delivered_Final_Changes__c.field-meta.xml
<CustomField>
    <fullName>Project_Delivered_Final_Changes__c</fullName>
    <label>Project Delivered/Final Changes</label>
    <type>Date</type>
</CustomField>