unpackaged/main/default/objects/ValuePlus__c/fields/Promo__c.field-meta.xml
<CustomField>
    <fullName>Promo__c</fullName>
    <description>#4902</description>
    <formula>IF(RecordType.DeveloperName =&#39;MyCase_Websites&#39;
&amp;&amp;Opportunity__r.CloseDate&gt;DATE(2022,03,10)
&amp;&amp;Opportunity__r.CloseDate&lt;DATE(2022,04,01)
,&#39;March Mania&#39;,
IF(RecordType.DeveloperName=&#39;MyCase_Websites&#39;
&amp;&amp;Opportunity__r.CloseDate&gt;=DATE(2022,04,01)
&amp;&amp;Opportunity__r.CloseDate&lt;=DATE(2022,04,30)
,&#39;April Promo&#39;,
IF(RecordType.DeveloperName =&#39;MyCase_Websites&#39;
&amp;&amp;Opportunity__r.CloseDate&gt;=DATE(2022,05,01)
&amp;&amp;Opportunity__r.CloseDate&lt;=DATE(2022,05,31)
,&#39;May Promo&#39;,&#39;No Promo&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo</label>
    <type>Text</type>
</CustomField>