unpackaged/main/default/objects/ValuePlus__c/fields/PS_Enrollment_Permitted__c.field-meta.xml
<CustomField>
    <fullName>PS_Enrollment_Permitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can we enroll this record in profit stars? True = checked, false = unchecked.</description>
    <label>ProfitStars Enrollment Permitted</label>
    <type>Checkbox</type>
</CustomField>