unpackaged/main/default/objects/ValuePlus__c/fields/PS_Initial_Approver__c.field-meta.xml
<CustomField>
    <fullName>PS_Initial_Approver__c</fullName>
    <label>PS Initial Approver</label>
    <type>Email</type>
</CustomField>