unpackaged/main/default/objects/ValuePlus__c/fields/PS_Initial_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>PS_Initial_Submitter_Email__c</fullName>
    <description>Email address of the person who submits this Value+ record for approval.</description>
    <label>PS Initial Submitter Email</label>
    <type>Email</type>
</CustomField>