unpackaged/main/default/objects/ValuePlus__c/fields/PS_Peer_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>PS_Peer_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is not checked, the account should not be enrolled with ProfitStars.</description>
    <label>PS Peer Review Complete</label>
    <type>Checkbox</type>
</CustomField>