unpackaged/main/default/objects/ValuePlus__c/fields/ps_UpdateRequired__c.field-meta.xml
<CustomField>
    <fullName>ps_UpdateRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profit Stars Update Required</label>
    <type>Checkbox</type>
</CustomField>