unpackaged/main/default/objects/ValuePlus__c/fields/ps_VelocityUpdateRequired__c.field-meta.xml
<CustomField>
    <fullName>ps_VelocityUpdateRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Velocity Update Required</label>
    <type>Checkbox</type>
</CustomField>