unpackaged/main/default/objects/ValuePlus__c/fields/Purchase_at_Signing__c.field-meta.xml
<CustomField>
    <fullName>Purchase_at_Signing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase at Signing</label>
    <type>Checkbox</type>
</CustomField>