unpackaged/main/default/objects/ValuePlus__c/fields/QuaternaryCondition1__c.field-meta.xml
<CustomField>
    <fullName>QuaternaryCondition1__c</fullName>
    <formula>IF(RecordType.Name = &quot;IM Payments&quot;, MC_Principal_4_Ownership__c &gt;= 0.25, Account__r.Principal_4_Ownership__c &gt;= 0.25)</formula>
    <label>QuaternaryCondition1</label>
    <type>Checkbox</type>
</CustomField>