unpackaged/main/default/objects/ValuePlus__c/fields/QuaternaryCondition2__c.field-meta.xml
<CustomField>
    <fullName>QuaternaryCondition2__c</fullName>
    <formula>IF(RecordType.Name = &quot;IM Payments&quot;, (ISBLANK(TRIM(MC_Principal_4_First_Name__c)) = FALSE || ISBLANK(TRIM(MC_Principal_4_Last_Name__c)) = FALSE || MC_Principal_4_Ownership__c &gt;= 0.25), (ISBLANK(TRIM(Account__r.Principal_4_Name__c)) = FALSE || Account__r.Principal_4_Ownership__c &gt;= 0.25))</formula>
    <label>QuaternaryCondition2</label>
    <type>Checkbox</type>
</CustomField>