unpackaged/main/default/objects/ValuePlus__c/fields/Ready__c.field-meta.xml
<CustomField>
    <fullName>Ready__c</fullName>
    <label>Ready</label>
    <type>Date</type>
</CustomField>