unpackaged/main/default/objects/ValuePlus__c/fields/Registrar_Company__c.field-meta.xml
<CustomField>
    <fullName>Registrar_Company__c</fullName>
    <description>Name of Law Firm</description>
    <label>Registrar Domain Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1&amp;1</fullName>
            </value>
            <value>
                <fullName>Bluehost</fullName>
            </value>
            <value>
                <fullName>Dreamhost</fullName>
            </value>
            <value>
                <fullName>FatCow</fullName>
            </value>
            <value>
                <fullName>GoDaddy</fullName>
            </value>
            <value>
                <fullName>Host Gator</fullName>
            </value>
            <value>
                <fullName>Hover</fullName>
            </value>
            <value>
                <fullName>iPage</fullName>
            </value>
            <value>
                <fullName>NameHub</fullName>
            </value>
            <value>
                <fullName>Network Solutions</fullName>
            </value>
            <value>
                <fullName>Register.com</fullName>
            </value>
            <value>
                <fullName>Web.com</fullName>
            </value>
            <value>
                <fullName>Yahoo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>