unpackaged/main/default/objects/ValuePlus__c/fields/Registrar_Company_New_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Registrar_Company_New_Text_Field__c</fullName>
    <description>Replaced old picklist field for APM Websites.  Part of R14179</description>
    <label>Domain Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>