unpackaged/main/default/objects/ValuePlus__c/fields/Registrar_Password__c.field-meta.xml
<CustomField>
    <fullName>Registrar_Password__c</fullName>
    <label>Domain Password</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>