unpackaged/main/default/objects/ValuePlus__c/fields/Registrar_Username__c.field-meta.xml
<CustomField>
    <fullName>Registrar_Username__c</fullName>
    <label>Domain Username</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>