unpackaged/main/default/objects/ValuePlus__c/fields/Secondary_Brand__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Brand__c</fullName>
    <label>Secondary Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASEpeer</fullName>
            </value>
            <value>
                <fullName>Docketwise</fullName>
            </value>
            <value>
                <fullName>LawPay</fullName>
            </value>
            <value>
                <fullName>MyCase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>