unpackaged/main/default/objects/ValuePlus__c/fields/SecondaryCondition1__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCondition1__c</fullName>
    <description>This field is required if Account Ownership Type is Partnership or Principal 2 Ownership is more than or equal to 25 Percent.</description>
    <formula>IF(RecordType.Name = &quot;IM Payments&quot;, MC_Principal_2_Ownership__c &gt;= 0.25, (ISPICKVAL(Account__r.Ownership_Type__c, &#39;Partnership&#39;) || Account__r.Principal_2_Ownership__c &gt;= 0.25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is required if Account Ownership Type is Partnership or Principal 2 Ownership is more than or equal to 25 Percent.</inlineHelpText>
    <label>SecondaryCondition1</label>
    <type>Checkbox</type>
</CustomField>